--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								Hey 👋! <br>
 								Welcome to PowerUP, a game built by team OLogN for Georgia Tech's
 								<i>CS 2340: Objects and Design.</i> <br>
-								Vote for us to PowerUP!
+								Voted best overall Project!
 							</p>
 
 							<ul class="actions">
